# fprime-zephyr-app

./: .gitignore  .gitmodules  CMakeLists.txt  Dockerfile  README.md  project.cmake  run_dev.py  settings.ini
Components/HelloWorld/: CMakeLists.txt
Components/LedDriver/: CMakeLists.txt  LedDriver.cpp  LedDriver.fpp  LedDriver.hpp
Components/LedDriver/docs/: sdd.md
Components/Minimal/: CMakeLists.txt  Minimal.cpp  Minimal.hpp
LedBlinker/: CMakeLists.txt  Kconfig  Main.cpp  Stub.cpp  prj.conf  settings.ini
LedBlinker/Top/: CMakeLists.txt  LedBlinkerPackets.xml  LedBlinkerTopology.cpp  LedBlinkerTopology.hpp  LedBlinkerTopologyDefs.hpp  instances.fpp  topology.fpp
LedBlinker/bench/: .gitignore  README.md  extract_fprime_zephyr_sizes.py  extract_svc_sizes.py  idle_performance.py  perf_macros.h  plot_components.py  plot_fprime_zephyr_sizes.py  plot_opt.py  run_bench.py
LedBlinker/bench/tmpl/: AcConstants.fpp.tmpl  FpConfig.h.tmpl  FprimeFwCMakeLists.txt.tmpl  FprimeSvcCMakeLists.txt.tmpl  FprimeSvcFileDownlink.cpp.tmpl  FprimeSvcFileUplink.cpp.tmpl  FprimeSvcTlmChan.cpp.tmpl  LogAssert.hpp.tmpl  StaticMemoryConfig.hpp.tmpl  TlmChanImplCfg.hpp.tmpl  instances.fpp.tmpl  prj.conf.tmpl  settings.ini.tmpl  topology.fpp.tmpl
LedBlinker/boards/: nucleo_h723zg.overlay
LedBlinker/config/: AcConstants.fpp  AcConstants.ini  FpConfig.h  StaticMemoryConfig.hpp  TlmChanImplCfg.hpp
LedMinimal/: CMakeLists.txt  Main.cpp  prj.conf
LedMinimal/Top/: CMakeLists.txt  LedMinimalPackets.xml  LedMinimalTopology.cpp  LedMinimalTopology.hpp  LedMinimalTopologyDefs.hpp  instances.fpp  topology.fpp
LedMinimal/boards/: nucleo_h723zg.overlay
QemuMinimal/: .gitignore  CMakeLists.txt  Main.cpp  README.md  prj.conf  settings.ini
QemuMinimal/Top/: CMakeLists.txt  QemuMinimalPackets.xml  QemuMinimalTopology.cpp  QemuMinimalTopology.hpp  QemuMinimalTopologyDefs.hpp  instances.fpp  topology.fpp
QemuMinimal/config/: AcConstants.fpp  DeframerCfg.hpp  FpConfig.h  TlmChanImplCfg.hpp
benchmarks/1.3-zephyr-cpp/: prj.conf
benchmarks/2-zephyr-fprime-minimal/: CMakeLists.txt  Main.cpp  prj.conf  settings.ini
benchmarks/2-zephyr-fprime-minimal/Top/: MyDeploymentPackets.xml  MyDeploymentTopology.cpp  MyDeploymentTopology.hpp  MyDeploymentTopologyDefs.hpp
benchmarks/2.1-zephyr-fprime-passive-comp/: Main.cpp
benchmarks/2.1-zephyr-fprime-passive-comp/Top/: CMakeLists.txt  MyDeploymentPackets.xml  MyDeploymentTopology.hpp  MyDeploymentTopologyDefs.hpp  instances.fpp
docker/: Dockerfile
fprime/: .gitignore  project.cmake
fprime-zephyr/: README.md  fprime-zephyr.cmake
fprime-zephyr/Drv/: CMakeLists.txt
fprime-zephyr/Drv/ZephyrGpioDriver/: ZephyrGpioDriver.cpp  ZephyrGpioDriver.fpp  ZephyrGpioDriver.hpp
fprime-zephyr/Drv/ZephyrGpioDriverPorts/: CMakeLists.txt  ZephyrGpioDriverPorts.fpp
fprime-zephyr/Drv/ZephyrRateDriver/: ZephyrRateDriver.cpp  ZephyrRateDriver.fpp  ZephyrRateDriver.hpp
fprime-zephyr/Drv/ZephyrTime/: ZephyrTimeImpl.cpp  ZephyrTimeImpl.hpp
fprime-zephyr/Drv/ZephyrUartDriver/: ZephyrUartDriver.cpp  ZephyrUartDriver.fpp  ZephyrUartDriver.hpp
fprime-zephyr/Fw/: CMakeLists.txt
fprime-zephyr/Fw/ZephyrMallocAllocator/: CMakeLists.txt  ZephyrMallocAllocator.cpp  ZephyrMallocAllocator.hpp
fprime-zephyr/Os/: File.cpp  IntervalTimer.cpp  LogPrintk.cpp  Queue.cpp  Task.cpp
fprime-zephyr/Zephyr/Drv/ZephyrTime/: CMakeLists.txt  ZephyrTimeImpl.cpp
fprime-zephyr/Zephyr/Os/: CMakeLists.txt  File.cpp  FileSystem.cpp  Task.cpp
fprime/Components/HelloWorld/: HelloWorld.cpp  HelloWorld.fpp  HelloWorld.hpp
fprime/Components/Minimal/: Minimal.fpp
fprime/Components/ZephyrTime/: CMakeLists.txt
fprime/LedBlinker/: settings.ini
fprime/LedBlinker/Top/: CMakeLists.txt  (+3 more)
fprime/MyDeployment/: CMakeLists.txt  Main.cpp  prj.conf
fprime/benchmarks/: analyze_elf.py  build_all.py  compp
fprime/fprime-zephyr/Os/: BufferQueue.cpp  CMakeLists.txt  File.cpp  Mutex.cpp  Queue.cpp  Task.cpp
(+32 files in other folders)
